Fixed alignment of menu bar, copyright info, and section headers

--- a/glsa.css
+++ b/glsa.css
@@ -36,6 +36,17 @@ body {
 	text-decoration: none;
 	font-weight: normal;
 	background-color: #0B5992;
+	text-align: center;
+}
+.menubar {
+	width: 702px;
+	height: 25px;
+	table-layout: fixed;
+	margin: auto;
+	border: 0;
+	padding: 0;
+	border-spacing: 1px;
+	align-content: center;
 }
 a.menu:visited, a.menu:link{
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -89,6 +100,7 @@ a:hover {
 	text-decoration: none;
 	font-weight: normal;
 	background-color: #C9DBED;
+	text-align: center;
 }
 .textbox {
 	font-family: Arial, Helvetica, sans-serif;
